cue/testdata/cycle/025_cannot_resolve_references_that_would_be_ambiguous.txtar
#name: cannot resolve references that would be ambiguous
#evalFull
-- in.cue --
a1: *0 | 1
a1: a3 - a2
a2: *0 | 1
a2: a3 - a1
a3: 1

b1: (*0 | 1) & b2
b2: (0 | *1) & b1

c1: (*{a: 1} | {b: 1}) & c2
c2: (*{a: 2} | {b: 2}) & c1
-- out/def --
a1: (*0 | 1) & a3-a2
a3: 1
a2: (*0 | 1) & a3-a1
b1: (*0 | 1) & b2
b2: (0 | *1) & b1
c1: (*{
	a: 1
} | {
	b: 1
}) & c2
c2: (*{
	a: 2
} | {
	b: 2
}) & c1
-- out/legacy-debug --
<0>{a1: ((*0 | 1) & (<1>.a3 - <1>.a2)), a3: 1, a2: ((*0 | 1) & (<1>.a3 - <1>.a1)), b1: (0 | 1), b2: (0 | 1), c1: (<2>{a: 1, b: 2} | <3>{a: 2, b: 1}), c2: (<4>{a: 2, b: 1} | <5>{a: 1, b: 2})}
-- out/compile --
--- in.cue
{
  a1: (*0|1)
  a1: (〈0;a3〉 - 〈0;a2〉)
  a2: (*0|1)
  a2: (〈0;a3〉 - 〈0;a1〉)
  a3: 1
  b1: ((*0|1) & 〈0;b2〉)
  b2: ((0|*1) & 〈0;b1〉)
  c1: ((*{
    a: 1
  }|{
    b: 1
  }) & 〈0;c2〉)
  c2: ((*{
    a: 2
  }|{
    b: 2
  }) & 〈0;c1〉)
}
-- out/eval/stats --
Leaks:  0
Freed:  52
Reused: 43
Allocs: 9
Retain: 19

Unifications: 24
Conjuncts:    80
Disjuncts:    52
-- out/evalalpha --
(struct){
  a1: (int){ |(*(int){ 0 }, (int){ 1 }) }
  a2: (int){ |(*(int){ 0 }, (int){ 1 }) }
  a3: (int){ 1 }
  b1: (int){ |((int){ 0 }, (int){ 1 }) }
  b2: (int){ |((int){ 0 }, (int){ 1 }) }
  c1: (struct){ |((struct){
      a: (int){ 1 }
      b: (int){ 2 }
    }, (struct){
      b: (int){ 1 }
      a: (int){ 2 }
    }) }
  c2: (struct){ |((struct){
      a: (int){ 2 }
      b: (int){ 1 }
    }, (struct){
      b: (int){ 2 }
      a: (int){ 1 }
    }) }
}
-- diff/-out/evalalpha<==>+out/eval --
diff old new
--- old
+++ new
@@ -1,9 +1,6 @@
 (struct){
-  a1: (_|_){
-    // [cycle] cycle error:
-    //     ./in.cue:2:5
-  }
-  a2: (int){ 1 }
+  a1: (int){ |(*(int){ 0 }, (int){ 1 }) }
+  a2: (int){ |(*(int){ 0 }, (int){ 1 }) }
   a3: (int){ 1 }
   b1: (int){ |((int){ 0 }, (int){ 1 }) }
   b2: (int){ |((int){ 0 }, (int){ 1 }) }
-- diff/todo/p1 --
a1: should be an error or include validators in result.
-- out/eval --
(struct){
  a1: (_|_){
    // [cycle] cycle error:
    //     ./in.cue:2:5
  }
  a2: (int){ 1 }
  a3: (int){ 1 }
  b1: (int){ |((int){ 0 }, (int){ 1 }) }
  b2: (int){ |((int){ 0 }, (int){ 1 }) }
  c1: (struct){ |((struct){
      a: (int){ 1 }
      b: (int){ 2 }
    }, (struct){
      b: (int){ 1 }
      a: (int){ 2 }
    }) }
  c2: (struct){ |((struct){
      a: (int){ 2 }
      b: (int){ 1 }
    }, (struct){
      b: (int){ 2 }
      a: (int){ 1 }
    }) }
}
